--- a/Priorities/Priorities/Base.lproj/Main.storyboard
+++ b/Priorities/Priorities/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -12,39 +13,53 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Priorities" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="center" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="LkE-ka-8CK">
-                                <rect key="frame" x="50" y="119" width="314" height="543"/>
+                            <stackView opaque="NO" contentMode="scaleAspectFit" verticalHuggingPriority="350" verticalCompressionResistancePriority="150" axis="vertical" distribution="fillProportionally" alignment="bottom" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="LkE-ka-8CK">
+                                <rect key="frame" x="50" y="74" width="314" height="748"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" verticalHuggingPriority="200" translatesAutoresizingMaskIntoConstraints="NO" id="Qbi-eN-t40" customClass="CountryHeaderView" customModule="Priorities" customModuleProvider="target">
+                                    <view contentMode="scaleToFill" horizontalHuggingPriority="350" verticalHuggingPriority="550" verticalCompressionResistancePriority="550" translatesAutoresizingMaskIntoConstraints="NO" id="Qbi-eN-t40" customClass="CountryHeaderView" customModule="Priorities" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="314" height="325"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <color key="backgroundColor" name="headerStart"/>
                                     </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3O0-Ag-m5C">
+                                    <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="200" verticalHuggingPriority="240" verticalCompressionResistancePriority="260" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="oub-be-40L">
                                         <rect key="frame" x="0.0" y="345" width="314" height="128"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                    </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cjy-XL-3wC">
-                                        <rect key="frame" x="0.0" y="493" width="314" height="50"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" horizontalHuggingPriority="200" translatesAutoresizingMaskIntoConstraints="NO" id="Fb1-9n-bKE">
+                                                <rect key="frame" x="0.0" y="0.0" width="190" height="128"/>
+                                                <color key="backgroundColor" systemColor="systemPurpleColor"/>
+                                            </view>
+                                            <view contentMode="scaleToFill" horizontalHuggingPriority="264" horizontalCompressionResistancePriority="850" translatesAutoresizingMaskIntoConstraints="NO" id="Cri-TO-HqR">
+                                                <rect key="frame" x="194" y="0.0" width="120" height="128"/>
+                                                <color key="backgroundColor" name="ticketStart"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="120" id="Vsx-V8-Cuv"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                    </stackView>
+                                    <view contentMode="scaleToFill" verticalHuggingPriority="280" verticalCompressionResistancePriority="755" translatesAutoresizingMaskIntoConstraints="NO" id="Cjy-XL-3wC">
+                                        <rect key="frame" x="0.0" y="493" width="314" height="255"/>
+                                        <color key="backgroundColor" systemColor="systemTealColor"/>
                                     </view>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="3O0-Ag-m5C" firstAttribute="top" secondItem="LkE-ka-8CK" secondAttribute="top" constant="345" id="NXd-y1-qIC"/>
-                                    <constraint firstItem="Cjy-XL-3wC" firstAttribute="top" secondItem="LkE-ka-8CK" secondAttribute="top" constant="493" id="Z3I-C7-LmX"/>
+                                    <constraint firstItem="oub-be-40L" firstAttribute="top" relation="lessThanOrEqual" secondItem="LkE-ka-8CK" secondAttribute="top" constant="345" id="Nv9-Yi-GBn"/>
+                                    <constraint firstItem="oub-be-40L" firstAttribute="leading" secondItem="Cjy-XL-3wC" secondAttribute="leading" id="QYp-o8-RFw"/>
+                                    <constraint firstItem="Qbi-eN-t40" firstAttribute="leading" secondItem="oub-be-40L" secondAttribute="leading" id="VBa-gN-crV"/>
+                                    <constraint firstItem="Qbi-eN-t40" firstAttribute="leading" secondItem="LkE-ka-8CK" secondAttribute="leadingMargin" id="wLc-bI-ZRW"/>
                                 </constraints>
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" name="ticketFinish"/>
                         <constraints>
                             <constraint firstItem="LkE-ka-8CK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="3SC-IZ-omp"/>
-                            <constraint firstItem="LkE-ka-8CK" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="75" id="OxL-2A-wWW"/>
-                            <constraint firstItem="LkE-ka-8CK" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="75" id="bi1-q1-3Ls"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="LkE-ka-8CK" secondAttribute="bottom" constant="200" id="jh4-C5-4gZ"/>
+                            <constraint firstItem="LkE-ka-8CK" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="RGP-3l-91T"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="LkE-ka-8CK" secondAttribute="bottom" constant="40" id="jh4-C5-4gZ"/>
+                            <constraint firstItem="LkE-ka-8CK" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="nWp-xf-9nt"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="LkE-ka-8CK" secondAttribute="trailing" constant="50" id="ou3-qm-V9T"/>
                         </constraints>
                     </view>
@@ -55,8 +70,20 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        <namedColor name="headerStart">
+            <color red="0.76470588235294112" green="0.078431372549019607" blue="0.19607843137254902" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="ticketFinish">
+            <color red="0.082352941176470587" green="0.3411764705882353" blue="0.59999999999999998" alpha="0.52736961920529801" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="ticketStart">
+            <color red="0.082352941176470587" green="0.59999999999999998" blue="0.3411764705882353" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="systemPurpleColor">
+            <color red="0.68627450980392157" green="0.32156862745098042" blue="0.87058823529411766" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemTealColor">
+            <color red="0.35294117647058826" green="0.78431372549019607" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
