--- a/Water Reminder/Water Reminder/Base.lproj/Main.storyboard
+++ b/Water Reminder/Water Reminder/Base.lproj/Main.storyboard
@@ -53,6 +53,7 @@
                                 <color key="backgroundColor" name="buttonBlue"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="140" id="Lei-d4-Kkk"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="45" id="bky-EX-6FW"/>
                                     <constraint firstAttribute="height" constant="45" id="pVB-Ul-pOV"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="15"/>
@@ -86,10 +87,10 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="uXy-5p-g1d" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="0yr-mY-PzC"/>
+                            <constraint firstItem="X9N-BE-7Bp" firstAttribute="top" secondItem="VZX-Vn-h2d" secondAttribute="bottom" constant="57" id="Gm2-Gu-IfM"/>
                             <constraint firstItem="X9N-BE-7Bp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="Hbz-Yv-qaG"/>
                             <constraint firstItem="X9N-BE-7Bp" firstAttribute="top" secondItem="uXy-5p-g1d" secondAttribute="bottom" constant="57" id="LNH-cN-HeZ"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="VZX-Vn-h2d" secondAttribute="trailing" constant="20" id="Tcc-NX-aFR"/>
-                            <constraint firstItem="VZX-Vn-h2d" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="554" id="bsD-cC-X9q"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="X9N-BE-7Bp" secondAttribute="bottom" constant="140" id="kOY-tA-CGj"/>
                             <constraint firstItem="j6I-OB-76U" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qvP-4y-CST"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="X9N-BE-7Bp" secondAttribute="trailing" constant="50" id="tLQ-Lu-7H6"/>
