--- a/Priorities/Priorities/Base.lproj/Main.storyboard
+++ b/Priorities/Priorities/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -17,40 +17,37 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleAspectFit" verticalHuggingPriority="350" verticalCompressionResistancePriority="150" axis="vertical" distribution="fillProportionally" alignment="bottom" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="LkE-ka-8CK">
+                            <stackView opaque="NO" contentMode="scaleAspectFit" verticalHuggingPriority="350" verticalCompressionResistancePriority="150" axis="vertical" distribution="fillProportionally" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="LkE-ka-8CK">
                                 <rect key="frame" x="50" y="74" width="314" height="748"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" horizontalHuggingPriority="350" verticalHuggingPriority="550" verticalCompressionResistancePriority="550" translatesAutoresizingMaskIntoConstraints="NO" id="Qbi-eN-t40" customClass="CountryHeaderView" customModule="Priorities" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="314" height="325"/>
+                                    <view contentMode="scaleToFill" horizontalHuggingPriority="350" verticalHuggingPriority="550" horizontalCompressionResistancePriority="100" verticalCompressionResistancePriority="550" translatesAutoresizingMaskIntoConstraints="NO" id="Qbi-eN-t40" customClass="CountryHeaderView" customModule="Priorities" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="314" height="301.5"/>
                                         <color key="backgroundColor" name="headerStart"/>
                                     </view>
-                                    <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="200" verticalHuggingPriority="240" verticalCompressionResistancePriority="260" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="oub-be-40L">
-                                        <rect key="frame" x="0.0" y="345" width="314" height="128"/>
+                                    <stackView opaque="NO" contentMode="center" horizontalHuggingPriority="200" verticalHuggingPriority="240" horizontalCompressionResistancePriority="600" verticalCompressionResistancePriority="260" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="oub-be-40L">
+                                        <rect key="frame" x="0.0" y="321.5" width="314" height="181.5"/>
                                         <subviews>
-                                            <view contentMode="scaleToFill" horizontalHuggingPriority="200" translatesAutoresizingMaskIntoConstraints="NO" id="Fb1-9n-bKE">
-                                                <rect key="frame" x="0.0" y="0.0" width="190" height="128"/>
+                                            <view contentMode="scaleToFill" horizontalHuggingPriority="200" placeholderIntrinsicWidth="184" placeholderIntrinsicHeight="128" translatesAutoresizingMaskIntoConstraints="NO" id="Fb1-9n-bKE">
+                                                <rect key="frame" x="0.0" y="0.0" width="184" height="181.5"/>
                                                 <color key="backgroundColor" systemColor="systemPurpleColor"/>
                                             </view>
                                             <view contentMode="scaleToFill" horizontalHuggingPriority="264" horizontalCompressionResistancePriority="850" translatesAutoresizingMaskIntoConstraints="NO" id="Cri-TO-HqR">
-                                                <rect key="frame" x="194" y="0.0" width="120" height="128"/>
+                                                <rect key="frame" x="194" y="0.0" width="120" height="181.5"/>
                                                 <color key="backgroundColor" name="ticketStart"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" constant="120" id="Vsx-V8-Cuv"/>
-                                                </constraints>
                                             </view>
                                         </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="lessThanOrEqual" priority="250" constant="314" id="ofy-Ch-w4A"/>
+                                        </constraints>
                                     </stackView>
-                                    <view contentMode="scaleToFill" verticalHuggingPriority="280" verticalCompressionResistancePriority="755" translatesAutoresizingMaskIntoConstraints="NO" id="Cjy-XL-3wC">
-                                        <rect key="frame" x="0.0" y="493" width="314" height="255"/>
+                                    <view contentMode="scaleToFill" verticalHuggingPriority="280" translatesAutoresizingMaskIntoConstraints="NO" id="Cjy-XL-3wC">
+                                        <rect key="frame" x="0.0" y="523" width="314" height="225"/>
                                         <color key="backgroundColor" systemColor="systemTealColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" priority="250" constant="314" id="kyD-le-Nzv"/>
+                                        </constraints>
                                     </view>
                                 </subviews>
-                                <constraints>
-                                    <constraint firstItem="oub-be-40L" firstAttribute="top" relation="lessThanOrEqual" secondItem="LkE-ka-8CK" secondAttribute="top" constant="345" id="Nv9-Yi-GBn"/>
-                                    <constraint firstItem="oub-be-40L" firstAttribute="leading" secondItem="Cjy-XL-3wC" secondAttribute="leading" id="QYp-o8-RFw"/>
-                                    <constraint firstItem="Qbi-eN-t40" firstAttribute="leading" secondItem="oub-be-40L" secondAttribute="leading" id="VBa-gN-crV"/>
-                                    <constraint firstItem="Qbi-eN-t40" firstAttribute="leading" secondItem="LkE-ka-8CK" secondAttribute="leadingMargin" id="wLc-bI-ZRW"/>
-                                </constraints>
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -71,13 +68,13 @@
     </scenes>
     <resources>
         <namedColor name="headerStart">
-            <color red="0.76470588235294112" green="0.078431372549019607" blue="0.19607843137254902" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.76499998569488525" green="0.078000001609325409" blue="0.19599999487400055" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="ticketFinish">
-            <color red="0.082352941176470587" green="0.3411764705882353" blue="0.59999999999999998" alpha="0.52736961920529801" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.0" green="0.43900001049041748" blue="0.88599997758865356" alpha="0.52700001001358032" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="ticketStart">
-            <color red="0.082352941176470587" green="0.59999999999999998" blue="0.3411764705882353" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.082000002264976501" green="0.60000002384185791" blue="0.34099999070167542" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemPurpleColor">
             <color red="0.68627450980392157" green="0.32156862745098042" blue="0.87058823529411766" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
