--- a/Water Reminder/Water Reminder/Base.lproj/Main.storyboard
+++ b/Water Reminder/Water Reminder/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bYn-4T-St9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bYn-4T-St9">
     <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -74,11 +74,8 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ukc-pT-tYI">
-                                <rect key="frame" x="215" y="89" width="95" height="35"/>
+                                <rect key="frame" x="225" y="89" width="85" height="35"/>
                                 <color key="backgroundColor" name="buttonBlue"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="95" id="eID-JJ-dU6"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="13"/>
                                 <state key="normal" title="Add">
                                     <color key="titleColor" red="0.98039215690000003" green="0.98039215690000003" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -92,19 +89,20 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="uXy-5p-g1d" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="0yr-mY-PzC"/>
+                            <constraint firstItem="ukc-pT-tYI" firstAttribute="leading" secondItem="Qz8-c6-lbO" secondAttribute="trailing" constant="15" id="2JW-ff-mky"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ukc-pT-tYI" secondAttribute="trailing" constant="10" id="Ch8-0X-LyT"/>
                             <constraint firstItem="X9N-BE-7Bp" firstAttribute="top" secondItem="VZX-Vn-h2d" secondAttribute="bottom" constant="30" id="Gm2-Gu-IfM"/>
                             <constraint firstItem="X9N-BE-7Bp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="Hbz-Yv-qaG"/>
+                            <constraint firstItem="ukc-pT-tYI" firstAttribute="bottom" secondItem="Qz8-c6-lbO" secondAttribute="bottom" id="Itk-nP-Iwz"/>
                             <constraint firstItem="X9N-BE-7Bp" firstAttribute="top" secondItem="uXy-5p-g1d" secondAttribute="bottom" constant="30" id="LNH-cN-HeZ"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="VZX-Vn-h2d" secondAttribute="trailing" constant="20" id="Tcc-NX-aFR"/>
-                            <constraint firstItem="ukc-pT-tYI" firstAttribute="top" secondItem="j6I-OB-76U" secondAttribute="bottom" constant="30" id="Zsr-yI-zFg"/>
-                            <constraint firstItem="ukc-pT-tYI" firstAttribute="centerY" secondItem="Qz8-c6-lbO" secondAttribute="centerY" id="b2S-rh-awP"/>
                             <constraint firstItem="Qz8-c6-lbO" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="f4m-op-ox8"/>
                             <constraint firstItem="Qz8-c6-lbO" firstAttribute="top" secondItem="j6I-OB-76U" secondAttribute="bottom" constant="30" id="jHG-rM-9OB"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="X9N-BE-7Bp" secondAttribute="bottom" constant="140" id="kOY-tA-CGj"/>
-                            <constraint firstAttribute="trailing" secondItem="ukc-pT-tYI" secondAttribute="trailing" constant="10" id="qqK-hf-Yl2"/>
                             <constraint firstItem="j6I-OB-76U" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qvP-4y-CST"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="X9N-BE-7Bp" secondAttribute="trailing" constant="50" id="tLQ-Lu-7H6"/>
-                            <constraint firstAttribute="trailing" secondItem="ukc-pT-tYI" secondAttribute="trailing" constant="10" id="yYa-ZW-sek"/>
+                            <constraint firstItem="VZX-Vn-h2d" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="uXy-5p-g1d" secondAttribute="trailing" constant="4" id="uUR-Qg-krI"/>
+                            <constraint firstItem="ukc-pT-tYI" firstAttribute="top" secondItem="Qz8-c6-lbO" secondAttribute="top" id="ydp-IQ-Sg2"/>
                             <constraint firstItem="j6I-OB-76U" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="yzG-hD-o3I"/>
                         </constraints>
                     </view>
@@ -130,10 +128,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" clipsSubviews="YES" contentMode="top" axis="vertical" alignment="top" spacing="27" translatesAutoresizingMaskIntoConstraints="NO" id="z30-b4-OK1">
-                                <rect key="frame" x="10" y="10" width="320" height="508"/>
+                                <rect key="frame" x="20" y="20" width="280" height="508"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recommended amount of water a day" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="13" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cM2-xE-CNc">
-                                        <rect key="frame" x="0.0" y="0.0" width="302" height="48"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="242.5" height="48"/>
                                         <fontDescription key="fontDescription" name="AppleSymbols" family="Apple Symbols" pointSize="26"/>
                                         <color key="textColor" name="TextBlue"/>
                                         <nil key="highlightedColor"/>
@@ -149,7 +147,7 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="odl-tS-vKn">
-                                        <rect key="frame" x="0.0" y="142" width="191" height="36"/>
+                                        <rect key="frame" x="0.0" y="142" width="127" height="36"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="35" id="PbR-PN-h5s"/>
@@ -157,15 +155,11 @@
                                         <segments>
                                             <segment title="Male"/>
                                             <segment title="Female"/>
-                                            <segment title="Other"/>
                                         </segments>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </segmentedControl>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="755" text="Set your bodyweight" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UCA-Jx-Nr9">
                                         <rect key="frame" x="0.0" y="204" width="132" height="16.5"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="132" id="rDu-hl-eMM"/>
-                                        </constraints>
                                         <fontDescription key="fontDescription" name="AppleSymbols" family="Apple Symbols" pointSize="18"/>
                                         <color key="textColor" name="TextBlue"/>
                                         <nil key="highlightedColor"/>
@@ -180,9 +174,8 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Set hours of fitness activity per day" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mGb-ei-Efg">
-                                        <rect key="frame" x="0.0" y="314.5" width="234" height="12"/>
+                                        <rect key="frame" x="0.0" y="314.5" width="233.5" height="12"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="234" id="L8L-Jk-YB1"/>
                                             <constraint firstAttribute="height" constant="12" id="pWd-Da-BqC"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="AppleSymbols" family="Apple Symbols" pointSize="18"/>
@@ -205,24 +198,18 @@
                                             <constraint firstAttribute="height" constant="32" id="t5w-bO-TLg"/>
                                         </constraints>
                                     </stepper>
-                                    <stackView opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="760" alignment="center" spacing="11" translatesAutoresizingMaskIntoConstraints="NO" id="m4T-Ny-Kj4">
-                                        <rect key="frame" x="0.0" y="464.5" width="291" height="43.5"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="760" alignment="center" spacing="87" translatesAutoresizingMaskIntoConstraints="NO" id="m4T-Ny-Kj4">
+                                        <rect key="frame" x="0.0" y="464.5" width="280" height="43.5"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1zs-gL-SMh">
-                                                <rect key="frame" x="0.0" y="7" width="140" height="30"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" constant="140" id="ZeC-Zr-S4g"/>
-                                                </constraints>
+                                                <rect key="frame" x="0.0" y="7" width="76" height="30"/>
                                                 <state key="normal" title="       Cancel"/>
                                                 <connections>
                                                     <action selector="cancelUserData:" destination="P4D-VI-T1l" eventType="touchUpInside" id="7zl-40-bKe"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UfC-OZ-O22">
-                                                <rect key="frame" x="151" y="7" width="140" height="30"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" constant="140" id="qif-XT-ACv"/>
-                                                </constraints>
+                                                <rect key="frame" x="163" y="7" width="117" height="30"/>
                                                 <state key="normal" title="Confirm changes"/>
                                                 <connections>
                                                     <action selector="btnConfirmUser:" destination="P4D-VI-T1l" eventType="touchUpInside" id="jIV-W1-jXN"/>
@@ -237,10 +224,10 @@
                         <viewLayoutGuide key="safeArea" id="bNg-pa-IlY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="z30-b4-OK1" firstAttribute="leading" secondItem="bNg-pa-IlY" secondAttribute="leading" constant="10" id="IBg-RP-IoK"/>
-                            <constraint firstItem="bNg-pa-IlY" firstAttribute="bottom" secondItem="z30-b4-OK1" secondAttribute="bottom" constant="50" id="cAf-cy-gXR"/>
-                            <constraint firstItem="z30-b4-OK1" firstAttribute="trailing" secondItem="bNg-pa-IlY" secondAttribute="trailing" constant="10" id="k6a-Dd-Qxn"/>
-                            <constraint firstItem="z30-b4-OK1" firstAttribute="top" secondItem="bNg-pa-IlY" secondAttribute="top" constant="10" id="y7W-QC-H1g"/>
+                            <constraint firstItem="bNg-pa-IlY" firstAttribute="bottom" secondItem="z30-b4-OK1" secondAttribute="bottom" constant="40" id="cAf-cy-gXR"/>
+                            <constraint firstItem="z30-b4-OK1" firstAttribute="leading" secondItem="bNg-pa-IlY" secondAttribute="leading" constant="20" id="gTo-OB-8W6"/>
+                            <constraint firstAttribute="trailing" secondItem="z30-b4-OK1" secondAttribute="trailing" constant="20" id="nNE-o0-rY2"/>
+                            <constraint firstItem="z30-b4-OK1" firstAttribute="top" secondItem="bNg-pa-IlY" secondAttribute="top" constant="20" id="y7W-QC-H1g"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Title" prompt="Back" leftItemsSupplementBackButton="YES" id="KAE-LZ-auF">
